# backend/src/main/java/com/odde/doughnut/controllers/dto/NoteDeleteDTO.java
@@ -1,0 +1,9 @@
+package com.odde.doughnut.controllers.dto;
+
+import jakarta.validation.constraints.NotNull;
+import lombok.Getter;
+import lombok.Setter;
+
+public class NoteDeleteDTO {
+  @Getter @Setter @NotNull private NoteDeleteReferenceHandling referenceHandling;
+}
